fixed sencers.py to record video and sound when a loud sound is dected and to send temp

--- a/UDP_FlaskApp/babysitter_udp/templates/index.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/index.html
@@ -71,6 +71,7 @@
                     </li>
                 </button>
                 </ul>
+                <!--
                 <div class="statusboard2">
                     <h4>{{ child_name }} is...</h4>
                     <span id="statusText">Active</span>
@@ -85,7 +86,7 @@
                             <img src="static/images/crying-icon.png" alt="Crying" width="32" height="32">
                         </div>
                     </div>
-                </div>
+                </div>-->
                 
                
             </div>
@@ -116,12 +117,14 @@
                     </div>
                 </div>
             </div>
+            <!--
             <div class="block3">
                 <button class="grid-button">Sleep</button>
                 <button class="grid-button2">Activity</button>
                 <button class="grid-button3">Temperature</button>
                 <button class="grid-button4">History</button>
             </div>
+            -->
 
             
         </form>
